<resources>
    <string name="app_name">LearnP</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_word">WordActivity</string>
    <string name="rule_title">Rule</string>
    <string name="rule_description_title">Description</string>
    <string name="rules_title">Rules</string>
    <string name="homophones_title">Homophones</string>
    <string name="word_activity_title">%1$s detail</string>
    <string name="text_no_rules">Sorry, there are no phonetic rules for this word yet.</string>
    <string name="text_no_homophones">There are no homophones for this word or we don\'t have them yet.</string>
    <string name="text_no_examples">Sorry, we don\'t have any example for this rule yet.</string>
    <string name="text_no_exceptions">There are no exceptions for this rule or we don\'t have them yet.</string>
    <string name="exceptions_title">Exceptions</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="eslogan">Your phonetics consultation app.</string>
    <string name="touch_text">Touch anywhere to continue</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="text_connection_failed">We can\'t connect to the server. Check your internet connection or try again later.</string>
</resources>