<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    android:theme="@style/ThemeOverlay.LearnP.FullscreenContainer"
    tools:context=".HomeActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <RelativeLayout
        android:id="@+id/screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:keepScreenOn="true"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/frase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eslogan"
            android:layout_below="@id/app_name"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/touch_text"
            android:layout_below="@id/frase"
            android:textColor="@color/light_grey"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>


    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
<!--    <FrameLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:fitsSystemWindows="true">-->

<!--        <LinearLayout-->
<!--            android:id="@+id/fullscreen_content_controls"-->
<!--            style="@style/Widget.Theme.LearnP.ButtonBar.Fullscreen"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="bottom|center_horizontal"-->
<!--            android:orientation="horizontal"-->
<!--            tools:ignore="UselessParent">-->
<!--            -->

<!--        </LinearLayout>-->
<!--    </FrameLayout>-->

</FrameLayout>