<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RuleActivity">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:layout_centerInParent="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.LearnP.AppBarOverlay"
            android:background="@color/purple_500"
            >

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/title_rule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rule_title"
            android:textSize="40sp"
            android:layout_below="@id/toolbar"
            />

        <LinearLayout
            android:id="@+id/description_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_rule"
            android:orientation="vertical"
            android:layout_marginTop="20sp">



            <TextView
                android:id="@+id/rule_description_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rule_description_title"
                android:textSize="30sp"
                app:layout_constraintTop_toBottomOf="@id/word"
                android:layout_marginHorizontal="10sp"/>


            <TextView
                android:id="@+id/rule_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="The rule description"
                android:layout_marginTop="10sp"
                android:textSize="20sp"
                android:layout_marginStart="20sp"
                />

        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/examples_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description_block"
            android:layout_marginTop="20sp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/title_examples"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Examples"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginHorizontal="10sp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/examples"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_examples"
                android:layout_marginHorizontal="10dp"

                app:layout_constraintHeight_max="200sp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="8dp"
                android:maxHeight="10sp"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_examples"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/text_no_examples"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/text_no_examples"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_examples"
                app:layout_constraintVertical_bias="0.0"
                android:layout_marginHorizontal="10sp"/>
            />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/exceptions_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/examples_block"
            android:orientation="vertical"
            android:layout_marginTop="20sp"
            android:layout_marginHorizontal="10sp">


            <TextView
                android:id="@+id/title_exceptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exceptions_title"
                android:textSize="30sp"
                 />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/exceptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:scrollbars="vertical"/>
            <TextView
                android:id="@+id/text_no_exceptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/text_no_exceptions"
                android:textSize="20sp"
                android:layout_marginHorizontal="10sp"/>
        </LinearLayout>


    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>